{
    "name": "PlayerInputControl",
    "maps": [
        {
            "name": "Player",
            "id": "1a2eef3d-735f-441e-b340-504e5938d56a",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "b07ec7a7-2310-41e0-afea-a1ec50c41547",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "237b17e0-3ee9-437a-9d70-ad1c5682b176",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Run",
                    "type": "Button",
                    "id": "f3d0abe6-eae0-4673-a705-69b2b24a2f64",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "PointMove",
                    "type": "Value",
                    "id": "9a39064e-095a-4380-99eb-a933c23bd9a8",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "KeyBoard",
                    "id": "3a1bbc52-0bd9-4d5d-8e61-5090f17ed27a",
                    "path": "2DVector(mode=1)",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "1b573357-b8b0-4803-8667-3a5864b3553a",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "c893c383-b85b-434e-a08c-667f143f55dc",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "b8247e01-bb95-4525-b7c3-014b5d64558d",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "810e3ae6-41c2-4ad7-969a-c292f0031848",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "PAD",
                    "id": "b2d6157a-1263-4369-bc5c-c3028892fd3a",
                    "path": "2DVector(mode=1)",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "33f747fe-faeb-42b6-9a9c-8158ec0def98",
                    "path": "<Gamepad>/leftStick/up",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "b263f449-b27b-47c2-82a4-3a455e090b6b",
                    "path": "<Gamepad>/leftStick/down",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "8c31b509-576b-47ba-bb35-c1b03bdc7694",
                    "path": "<Gamepad>/leftStick/left",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "ae120c54-365f-40df-a590-b186f8006f65",
                    "path": "<Gamepad>/leftStick/right",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "ed25d0e9-082f-4a90-b19a-6ef67244885f",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "85a072fc-392a-4de6-80df-f8724e9a6194",
                    "path": "<Keyboard>/leftShift",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Run",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ce0874a6-7074-4604-a6b8-b45556d5b3ac",
                    "path": "<Mouse>/position",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "PointMove",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}